--- a/public/assets/css/quicklaw.webflow.css
+++ b/public/assets/css/quicklaw.webflow.css
@@ -1458,7 +1458,8 @@ textarea {
   flex-flow: column;
   height: 100%;
   display: flex;
-  /* overflow: auto; */
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .download-reciept {
